--- a/economics-pyqs-gspluscsat-hindi.html
+++ b/economics-pyqs-gspluscsat-hindi.html
@@ -583,7 +583,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
                     <div class="grand-btn-group">
                         <button class="grand-btn-primary" onclick="restartJourney()">फिर से शुरू करें</button>
-                        <button class="grand-btn-secondary" onclick="window.location.href='economics-pyqs-gspluscsat-english.html'">अर्थशास्त्र शुरू करें</button>
+                        <button class="grand-btn-secondary" onclick="window.location.href='geography-pyqs-gspluscsat-hindi.html'">Start Geography</button>
                     </div>
                 </div>
             </div>
