--- a/history-pyqs-gspluscsat-english.html
+++ b/history-pyqs-gspluscsat-english.html
@@ -586,7 +586,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
                     <div class="grand-btn-group">
                         <button class="grand-btn-primary" onclick="restartJourney()">START AGAIN</button>
-                        <button class="grand-btn-secondary" onclick="window.location.href='indian-polity-pyqs-gspluscsat-english.html'">START POLITY</button>
+                        <button class="grand-btn-secondary" onclick="window.location.href='indian-polity-economics-geography-bio-sandt-pyqs-gspluscsat-english.html'">Start Next</button>
                     </div>
                 </div>
             </div>
