--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>STI Skilli | Loading...</title>
     <!-- Redirect Script -->
     <script src="redirect.js"></script>
+    <link rel="manifest" href="/GovtExam/manifest.json">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
