--- a/index.html
+++ b/index.html
@@ -249,5 +249,23 @@
             requestAnimationFrame(loadLoop);
         };
     </script>
+    <!-- Splash redirect logic -->
+<script>
+const params = new URLSearchParams(window.location.search);
+const allow = params.get("allow");
+
+// token preserve karo
+if (allow === "stiskilli") {
+  setTimeout(() => {
+    window.location.href = "main.html?allow=stiskilli";
+  }, SPLASH_TIME);
+} else {
+  // bina token aaye ho to redirect.js handle karega
+  setTimeout(() => {
+    window.location.href = "main.html";
+  }, SPLASH_TIME);
+}
+</script>
+
 </body>
 </html>
