--- a/history-pyqs-gspluscsat-english.html
+++ b/history-pyqs-gspluscsat-english.html
@@ -7190,10 +7190,10 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
         document.getElementById('rzp-button').addEventListener('click', () => {
             const rzp = new Razorpay({
-                key: "rzp_live_zyUA84YdEZR7rO", 
+                key: "rzp_live_SLy447saTnXqbZ", 
                 amount: selectedPlanPrice*100, 
                 currency: "INR",
-                name: "SKILLI PRO", 
+                name: "StiWorldOfficial", 
                 description: selectedPlanLabel,
                 handler: function(r){ 
                     userData.txn = r.razorpay_payment_id; 
